# RPCTest

./: README.md
client/: CMakeLists.txt  ModelConfigStore.cpp  ModelConfigStore.h  ModelContainer.cpp  ModelContainer.h  RPCClient.cpp  RPCClient.h  RPCConnection.cpp  RPCConnection.h  RPCServer.cpp  RPCServer.h  RPCUtil.cpp  RPCUtil.h  main.cpp
server/: test_rpc.py  test_rpc_client.py  test_rpc_server.py
